--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
+    "joi-oid": "^1.1.2",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
   },
